# h3

./: .gitignore  CMakeLists.txt  appveyor.yml
.github/workflows/: test-windows.yml
python/: animation.py  pyproject.toml
src/apps/benchmarks/: benchmarkKRing.c
src/apps/testapps/: testBaseCells.c  testCellToBoundaryEdgeCases.c  testCellToLocalIj.c  testCellsToLinkedMultiPolygon.c  testCoordIj.c  testH3Api.c  testH3Memory.c  testH3ToGeo.c  testPentagonIndexes.c  testPolygonToCells.c
src/h3lib/include/: alloc.h  faultInjection.h
src/h3lib/lib/: algos.c  directedEdge.c  edge.c  faceijk.c  faultInjection.c  h3Index.c  iterators.c  latLng.c  polyfill.c
src/h3librust/: Cargo.toml
src/h3librust/src/: baseCells.rs  constants.rs  coordijk.rs  faceijk.rs  h3Index.rs  h3api.rs  latLng.rs  main.rs  vec2d.rs  vec3d.rs
